--- a/templates/pedido/productos.html
+++ b/templates/pedido/productos.html
@@ -3,6 +3,15 @@
 <div class="container">
     <div class="row">
         <a href="{% url 'pedido:crear_producto' %}" class="btn btn-outline-dark">Dar de alta a nuevo producto</a>
+        <form class="form-inline" method="GET">
+            <div class="input-group mb-2 mr-sm-2">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">@</div>
+                </div>
+                <input type="text" class="form-control" id="search" name="search" placeholder="Buscar codigo o descripción">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2"><i class="material-icons">search</i></button>
+        </form>
     </div>
     <div class="row">
         <table class="table">
