correcciones en modelos y templates de permisos, correccion de eliminacion de partidas solo cuando este en status pendiente de autorizar

--- a/templates/pedido/ver_detalle.html
+++ b/templates/pedido/ver_detalle.html
@@ -17,10 +17,16 @@
       <td>{{art.dtl_cantidad}}</td>
       <td>
         {% if perms.pedido.change_detallepedido %}
+        {% if art.dtl_id_pedido.ped_estatusPedido == 1 %}
         <a class="btn btn-primary" href="{% url 'pedido:detalle_pedido_update' art.dtl_id_detalle art.dtl_id_pedido %}" role="button"><i class="material-icons">edit</i></a>
         {% endif %}
+        {% endif %}
         {% if perms.pedido.delete_detallepedido %}
+        
+        {% if art.dtl_id_pedido.ped_estatusPedido == 1 %}
         <a class="btn btn-danger" href="{% url 'pedido:detalle_pedido_delete' art.dtl_id_detalle art.dtl_id_pedido %}" role="button"><i class="material-icons">delete_forever</i></a>
+        {% endif %}
+
         {% endif %}
       </td>
     </tr>
