--- a/templates/pedido/pedido_list.html
+++ b/templates/pedido/pedido_list.html
@@ -1,41 +1,87 @@
 {% extends 'admin/base_ecomer.html'%}
 {% block contenido %}
 <br>
-<div class="container">
-  <form class="form-inline">
-    <div class="row">
-      <div class="col">
-        <select class="form-control" id="status" name="status">
-          <option selected disabled>Estatus pedido</option>
-          <option value="0">Todo</option>
-          <option value="1">Pendiente por autorizar</option>
-          <option value="2">Autorizado</option>
-          <option value="6">Excel Descargado</option>
-          <option value="3">Facturado</option>
-          <option value="4">Rechazado</option>
-          <option value="5">Entregado</option>
 
-        </select>
-      </div>
-      <div class="col">
-        <select class="form-control" id="tipo_pedido" name="tipo_pedido">
-          <option selected disabled>Tipo de pedido</option>
-          <option value="1">Papeleria</option>
-          <option value="2">Limpieza</option>
-          <option value="3">Limpieza consultorio</option>
-        </select>
-      </div>
-      <div class="col">
-        <button type="submit" class="btn btn-primary mb-2"><i class="material-icons">search</i></button>
-      </div>
-      <div class="col">
-      {% if perms.pedido.delete_pedido  %}
-        <a class="btn btn-danger mb-2" href="{% url 'pedido:listar_pedido_delete' %}" role="button">Eliminar pedidos rechazados</a>
-      {% endif %}
+<div class="row">
+  <div class="card col-sm-6">
+    <div class="card-header">
+      Filtrar
+    </div>
+    <div class="card-body">
+      <form class="form-inline">
+        <div class="row">
+          <div class="col">
+            <select class="form-control" id="status" name="status">
+              <option selected disabled>Estatus pedido</option>
+              <option value="0">Todo</option>
+              <option value="1">Pendiente por autorizar</option>
+              <option value="2">Autorizado</option>
+              <option value="6">Excel Descargado</option>
+              <option value="3">Facturado</option>
+              <option value="4">Rechazado</option>
+              <option value="5">Entregado</option>
+
+            </select>
+          </div>
+          <div class="col">
+            <select class="form-control" id="tipo_pedido" name="tipo_pedido">
+              <option selected disabled>Tipo de pedido</option>
+              <option value="1">Papeleria</option>
+              <option value="2">Limpieza</option>
+              <option value="3">Limpieza consultorio</option>
+            </select>
+          </div>
+          <div class="col">
+            <button type="submit" class="btn btn-primary mb-2"><i class="material-icons">search</i></button>
+          </div>
+          <div class="col">
+            {% if perms.pedido.delete_pedido  %}
+            <a class="btn btn-danger mb-2" href="{% url 'pedido:listar_pedido_delete' %}"
+              title="Eliminar pedidos rechazados" role="button"><i class="material-icons">delete_forever</i></a>
+            {% endif %}
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+{% if usuario.tipo_user == 1 or usuario.tipo_user == 2 %}
+  
+
+  <div class="card col-sm-6">
+    <div class="card-header">
+      Gererar etiquetas pedidos
+    </div>
+    <div class="card-body">
+      <div class="row">
+        <div class="form-group col">
+          <label for="example-date-input" class="col-form-label">Inicio</label>
+
+          <input class="form-control" type="date" value="{% now 'Y-m-d' %}" id="fecha_init">
+
+        </div>
+        <div class="form-group col">
+          <label for="example-date-input" class="col-form-label">Fin</label>
+
+          <input class="form-control" type="date" value="{% now 'Y-m-d' %}" id="fecha_fin">
+
+        </div>
+        <div class="form-group col">
+          <br>
+          <button type="button" onclick="genrar_pdf_pedidos()" class="btn btn-primary"><i
+              class="material-icons">cloud_download</i></button>
+        </div>
+        <div class="row">
+          <div id="tabla">
+
+          </div>
+        </div>
       </div>
     </div>
-  </form>
+  </div>
+  {% endif %}
 </div>
+
+
 <br>
 
 <table class="table">
@@ -67,12 +113,13 @@
       <td><small>{{ dato.get_dtl_tipo_pedido_display}}</small></td>
       <td><small>{{ dato.ped_id_UsuarioAutorizo}}</small></td>
       <td><small>
-      {% if dato.ped_autorizo_fuera_tiempo %}
-      <span class="badge badge-danger">{{ dato.get_ped_estatusPedido_display}}</span>
-      {% else %}
-      <span class="badge badge-success">{{ dato.get_ped_estatusPedido_display}}</span>
-      {% endif %}
-      </small></td>
+          {% if dato.ped_autorizo_fuera_tiempo %}
+          <span class="badge badge-warning">{{ dato.get_ped_estatusPedido_display}}</span>
+          {% else %}
+          <span
+            class="badge badge-{% if dato.ped_estatusPedido == 1 %}secondary{% endif %}{% if dato.ped_estatusPedido == 2 %}success{% endif %}{% if dato.ped_estatusPedido == 3 %}primary{% endif %}{% if dato.ped_estatusPedido == 4 %}danger{% endif %}{% if dato.ped_estatusPedido == 5 %}dark{% endif %}{% if dato.ped_estatusPedido == 6 %}info{% endif %}">{{ dato.get_ped_estatusPedido_display}}</span>
+          {% endif %}
+        </small></td>
       <td>
         {% if dato.ped_estatusPedido == 3 %}
         <a href="{{dato.ped_pdffac.url}}">PDF</a>
@@ -82,27 +129,28 @@
       </td>
 
       <td>
-        <a class="btn btn-primary btn-sm" href="{% url 'pedido:detalle_pedido' dato.ped_id_ped  %}" title="Ver productos"
-          role="button">
+        <a class="btn btn-primary btn-sm" href="{% url 'pedido:detalle_pedido' dato.ped_id_ped  %}"
+          title="Ver productos" role="button">
           <i class="material-icons">remove_red_eye</i>
         </a>
-        <a class="btn btn-primary btn-sm" href="{% url 'pedido:pedido_info' dato.ped_id_ped  %}" title="Info" role="button">
+        <a class="btn btn-primary btn-sm" href="{% url 'pedido:pedido_info' dato.ped_id_ped  %}" title="Info"
+          role="button">
           <i class="material-icons">info</i>
         </a>
         {% if usuario.tipo_user != 3 %}
 
 
         {% if dato.ped_estatusPedido == 1 %}
-        <a class="btn btn-success btn-sm" href="{% url 'pedido:auto_pedido' dato.ped_id_ped %}" title="Autorizar" role="button"><i
-            class="material-icons">thumb_up</i></a>
-        <a class="btn btn-danger btn-sm" href="{% url 'pedido:rechaza_pedido' dato.ped_id_ped %}" title="Rechazar" role="button"><i
-            class="material-icons">thumb_down</i></a>
+        <a class="btn btn-success btn-sm" href="{% url 'pedido:auto_pedido' dato.ped_id_ped %}" title="Autorizar"
+          role="button"><i class="material-icons">thumb_up</i></a>
+        <a class="btn btn-danger btn-sm" href="{% url 'pedido:rechaza_pedido' dato.ped_id_ped %}" title="Rechazar"
+          role="button"><i class="material-icons">thumb_down</i></a>
         {% endif %}
 
         {% if dato.ped_estatusPedido == 2 %}
 
-        <a class="btn btn-secondary btn-sm" target="_blank" title="Excel" href="{% url 'pedido:descarga_pedido' dato.ped_id_ped %}"
-          role="button">
+        <a class="btn btn-secondary btn-sm" target="_blank" title="Excel"
+          href="{% url 'pedido:descarga_pedido' dato.ped_id_ped %}" role="button">
           <i class="material-icons">cloud_download</i>
         </a>
         <a class="btn btn-success btn-sm" title="subir factura" href="{% url 'pedido:pedido_update' dato.ped_id_ped %}"
@@ -123,3 +171,13 @@
 </table>
 
 {% endblock contenido %}
+{% block script %}
+{% load static %}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"
+  integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/jspdf-autotable@3.1.1/dist/jspdf.plugin.autotable.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+<script src="{% static 'js/gen_pdf.js' %}"></script>
+
+{% endblock script %}
