--- a/templates/pedido/ver_detalle.html
+++ b/templates/pedido/ver_detalle.html
@@ -1,4 +1,5 @@
 {% extends 'admin/base_ecomer.html'%}
+{% load humanize %}
 {% block contenido %}
 <table class="table table-striped">
   <thead>
@@ -35,7 +36,7 @@
       <th scope="row"></th>
       <td></td>
       <td><strong>Partidas: </strong>{{suma_total_partids.dtl_cantidad__sum}}</td>
-      <td><strong>Total: </strong>{{suma_total.dtl_precio__sum}}</td>
+      <td><strong>Total: </strong>{{suma_total|intcomma}}</td>
     </tr>
 
   </tbody>
