--- a/templates/pedido/pedido_list.html
+++ b/templates/pedido/pedido_list.html
@@ -1,47 +1,104 @@
 {% extends 'admin/base_ecomer.html'%}
 {% block contenido %}
 <br>
-
+{% if messages %}
+<div class="container">
 <div class="row">
+    <ul class="messages">
+        {% for message in messages %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}!
+          </div>
+        {% endfor %}
+    </ul>
+  </div>
+</div>
+{% endif %}
+<div class="row">
+
+ 
+
+
   <div class="card col-sm-6">
     <div class="card-header">
       Filtrar
     </div>
     <div class="card-body">
-      <form class="form-inline">
-        <div class="row">
-          <div class="col">
-            <select class="form-control" id="status" name="status">
-              <option selected disabled>Estatus pedido</option>
-              <option value="0">Todo</option>
-              <option value="1">Pendiente por autorizar</option>
-              <option value="2">Autorizado</option>
-              <option value="6">Excel Descargado</option>
-              <option value="3">Facturado</option>
-              <option value="4">Rechazado</option>
-              <option value="5">Entregado</option>
+     
 
-            </select>
+
+      <form>
+          <div class="row">
+          <div class="form-group col-sm-3">
+            <label for="inicio">Fecha Inicio</label>
+            <input type="date" name="inicio" class="form-control" value="{{view.request.GET.inicio}}" placeholder="Inicio" required> 
           </div>
-          <div class="col">
-            <select class="form-control" id="tipo_pedido" name="tipo_pedido">
-              <option selected disabled>Tipo de pedido</option>
-              <option value="1">Papeleria</option>
-              <option value="2">Limpieza</option>
-              <option value="3">Limpieza consultorio</option>
-            </select>
+          <div class="form-group col-sm-3">
+            <label for="fin">Fecha Final</label>
+            <input type="date" name="fin" class="form-control" value="{{view.request.GET.fin}}" placeholder="Fin" required>
           </div>
-          <div class="col">
-            <button type="submit" class="btn btn-primary mb-2"><i class="material-icons">search</i></button>
+          <div class="form-group col-sm-3">
+            <label for="exampleFormControlSelect1">Status Pedido</label>
+            <select class="form-control" id="status" name="status" required> 
+                <option value="0" {% if view.request.GET.status == '0' %}selected{% endif %}>Todo</option>
+                <option value="1" {% if view.request.GET.status == '1' %}selected{% endif %}>Pendiente por autorizar</option>
+                <option value="2" {% if view.request.GET.status == '2' %}selected{% endif %}>Autorizado</option>
+                <option value="6" {% if view.request.GET.status == '6' %}selected{% endif %}>Excel Descargado</option>
+                <option value="3" {% if view.request.GET.status == '3' %}selected{% endif %}>Facturado</option>
+                <option value="4" {% if view.request.GET.status == '4' %}selected{% endif %}>Rechazado</option>
+                <option value="5" {% if view.request.GET.status == '5' %}selected{% endif %}>Entregado</option>
+  
+              </select>            
           </div>
-          <div class="col">
-            {% if perms.pedido.delete_pedido  %}
-            <a class="btn btn-danger mb-2" href="{% url 'pedido:listar_pedido_delete' %}"
-              title="Eliminar pedidos rechazados" role="button"><i class="material-icons">delete_forever</i></a>
-            {% endif %}
+          <div class="form-group col-sm-3">
+            <label for="exampleFormControlSelect1">Tipo Pedido</label>
+            <select class="form-control" id="tipo_pedido" name="tipo_pedido" required>
+                <option value="0" {% if view.request.GET.tipo_pedido == '0' %}selected{% endif %}>Todo</option>
+                <option value="1" {% if view.request.GET.tipo_pedido == '1' %}selected{% endif %}>Papeleria</option>
+                <option value="2" {% if view.request.GET.tipo_pedido == '2' %}selected{% endif %}>Limpieza</option>
+                <option value="3" {% if view.request.GET.tipo_pedido == '3' %}selected{% endif %}>Limpieza consultorio</option> 
+                <option value="4" {% if view.request.GET.tipo_pedido == '4' %}selected{% endif %}>Toner</option> 
+              </select>        
           </div>
-        </div>
-      </form>
+          <div class="form-group col-sm-3"> 
+              <button type="submit" class="btn btn-primary btn-sm"><i class="material-icons">search</i></button>
+          </div>
+          </div>
+        </form>
+        <!-- <form class="form-inline"> 
+          <div class="row">
+            <div class="col">
+              <select class="form-control" id="status" name="status">
+                <option selected disabled>Estatus pedido</option>
+                <option value="0">Todo</option>
+                <option value="1">Pendiente por autorizar</option>
+                <option value="2">Autorizado</option>
+                <option value="6">Excel Descargado</option>
+                <option value="3">Facturado</option>
+                <option value="4">Rechazado</option>
+                <option value="5">Entregado</option>
+
+              </select>
+            </div>
+            <div class="col">
+              <select class="form-control" id="tipo_pedido" name="tipo_pedido">
+                <option selected disabled>Tipo de pedido</option>
+                <option value="1">Papeleria</option>
+                <option value="2">Limpieza</option>
+                <option value="3">Limpieza consultorio</option>
+              </select>
+            </div>
+            <div class="col">
+              <button type="submit" class="btn btn-primary mb-2"><i class="material-icons">search</i></button>
+            </div>
+            <div class="col">
+              {% if perms.pedido.delete_pedido  %}
+              <a class="btn btn-danger mb-2" href="{% url 'pedido:listar_pedido_delete' %}"
+                title="Eliminar pedidos rechazados" role="button"><i class="material-icons">delete_forever</i></a>
+              {% endif %}
+            </div>
+          </div>
+        </form> -->
     </div>
   </div>
 {% if usuario.tipo_user == 1 or usuario.tipo_user == 2 %}
@@ -133,6 +190,12 @@
           title="Ver productos" role="button">
           <i class="material-icons">remove_red_eye</i>
         </a>
+
+        <a class="btn btn-primary btn-sm" href="{% url 'pedido:download_pedido' %}?pedido_id={{dato.ped_id_ped}}"
+          title="Descargar PDF" role="button" target="_blank">
+          <i class="material-icons">play_for_work</i>
+        </a>
+
         <a class="btn btn-primary btn-sm" href="{% url 'pedido:pedido_info' dato.ped_id_ped  %}" title="Info"
           role="button">
           <i class="material-icons">info</i>
@@ -153,11 +216,14 @@
           href="{% url 'pedido:descarga_pedido' dato.ped_id_ped %}" role="button">
           <i class="material-icons">cloud_download</i>
         </a>
+       
+        {% endif %}
+
+        {% if dato.ped_estatusPedido == 6 %}
         <a class="btn btn-success btn-sm" title="subir factura" href="{% url 'pedido:pedido_update' dato.ped_id_ped %}"
           role="button">
           <i class="material-icons">cloud_upload</i>
         </a>
-
         {% endif %}
 
         {% endif %}
