cambios en nombre de logo en static

--- a/templates/admin/base_ecomer.html
+++ b/templates/admin/base_ecomer.html
@@ -56,7 +56,7 @@
                 <div class="header3-wrap">
                     <div class="header__logo">
                         <a href="{% url 'index' %}">
-                            <img src="{% static 'images/logo-farmatodo.png' %}" style="width:200px;height:60px;"
+                            <img src="{% static 'images/logo.png' %}" style="width:200px;height:60px;"
                                 alt="ecommerce" />
                         </a>
                     </div>
