--- a/templates/login_ecomer.html
+++ b/templates/login_ecomer.html
@@ -22,7 +22,7 @@
                     <div class="login-content">
                         <div class="login-logo">
                             <a href="#">
-                                <img src="{% static 'images/logo-farmatodo.png' %}" alt="CoolAdmin">
+                                <img src="{% static 'images/logo.png' %}" alt="CoolAdmin">
                             </a>
                         </div>
                         <div class="login-form">
