--- a/templates/admin/base_ecomer.html
+++ b/templates/admin/base_ecomer.html
@@ -210,8 +210,11 @@
                 </div>
             </div>
         </header>
+
         <!-- END HEADER DESKTOP-->
         {% endblock menu_desktop %}
+
+
         <!-- PAGE CONTENT-->
         <div class="page-content--bgf7">
             <div class="container">
@@ -224,6 +227,8 @@
                 {% endif %}
             </div>
             {% block contenido %}
+
+        
 
             {% if usuario.suc_pertene is None %}
 
@@ -279,7 +284,17 @@
                                 </div>
                                 <div class="info">
                                     <h3>Toner</h3>
-                                    <p>Sucursal</p>
+                                    <p>Sucursal</p> 
+                                </div>
+                            </a></div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="ih-item circle effect6 scale_up"><a href="{% url 'empresa:detl_compra_suc' 5 %}">
+                                <div class="img"><img src="{% static 'images/consumibles.png' %}" alt="img">
+                                </div>
+                                <div class="info">
+                                    <h3>Papeleria</h3>
+                                    <p>Consultorio</p> 
                                 </div>
                             </a></div>
                     </div>
