--- a/templates/pedido/pedido_list.html
+++ b/templates/pedido/pedido_list.html
@@ -58,6 +58,7 @@
                 <option value="2" {% if view.request.GET.tipo_pedido == '2' %}selected{% endif %}>Limpieza</option>
                 <option value="3" {% if view.request.GET.tipo_pedido == '3' %}selected{% endif %}>Limpieza consultorio</option> 
                 <option value="4" {% if view.request.GET.tipo_pedido == '4' %}selected{% endif %}>Toner</option> 
+                <option value="5" {% if view.request.GET.tipo_pedido == '5' %}selected{% endif %}>Papeleria consultorio</option> 
               </select>        
           </div>
           <div class="form-group col-sm-3"> 
