add nueva forma de compra toner consultorio

--- a/templates/admin/base_ecomer.html
+++ b/templates/admin/base_ecomer.html
@@ -284,16 +284,26 @@
                                 </div>
                                 <div class="info">
                                     <h3>Toner</h3>
-                                    <p>Sucursal</p> 
+                                    <p>Sucursal</p>  
                                 </div>
                             </a></div>
                     </div>
                     <div class="col-sm-3">
                         <div class="ih-item circle effect6 scale_up"><a href="{% url 'empresa:detl_compra_suc' 5 %}">
-                                <div class="img"><img src="{% static 'images/consumibles.png' %}" alt="img">
+                                <div class="img"><img src="{% static 'images/papeleria_consultorio.jpeg' %}" alt="img">
                                 </div>
                                 <div class="info">
                                     <h3>Papeleria</h3>
+                                    <p>Consultorio</p> 
+                                </div>
+                            </a></div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="ih-item circle effect6 scale_up"><a href="{% url 'empresa:detl_compra_suc' 6 %}">
+                                <div class="img"><img src="{% static 'images/consumibles.png' %}" alt="img">
+                                </div>
+                                <div class="info">
+                                    <h3>Toner</h3>
                                     <p>Consultorio</p> 
                                 </div>
                             </a></div>
