--- a/templates/pedido/pedido_list.html
+++ b/templates/pedido/pedido_list.html
@@ -28,40 +28,16 @@
 
 
       <form>
-          <div class="row">
-          <div class="form-group col-sm-3">
-            <label for="inicio">Fecha Inicio</label>
-            <input type="date" name="inicio" class="form-control" value="{{view.request.GET.inicio}}" placeholder="Inicio" required> 
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="fin">Fecha Final</label>
-            <input type="date" name="fin" class="form-control" value="{{view.request.GET.fin}}" placeholder="Fin" required>
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="exampleFormControlSelect1">Status Pedido</label>
-            <select class="form-control" id="status" name="status" required> 
-                <option value="0" {% if view.request.GET.status == '0' %}selected{% endif %}>Todo</option>
-                <option value="1" {% if view.request.GET.status == '1' %}selected{% endif %}>Pendiente por autorizar</option>
-                <option value="2" {% if view.request.GET.status == '2' %}selected{% endif %}>Autorizado</option>
-                <option value="6" {% if view.request.GET.status == '6' %}selected{% endif %}>Excel Descargado</option>
-                <option value="3" {% if view.request.GET.status == '3' %}selected{% endif %}>Facturado</option>
-                <option value="4" {% if view.request.GET.status == '4' %}selected{% endif %}>Rechazado</option>
-                <option value="5" {% if view.request.GET.status == '5' %}selected{% endif %}>Entregado</option>
-  
-              </select>            
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="exampleFormControlSelect1">Tipo Pedido</label>
-            <select class="form-control" id="tipo_pedido" name="tipo_pedido" required>
-                <option value="0" {% if view.request.GET.tipo_pedido == '0' %}selected{% endif %}>Todo</option>
-                <option value="1" {% if view.request.GET.tipo_pedido == '1' %}selected{% endif %}>Papeleria</option>
-                <option value="2" {% if view.request.GET.tipo_pedido == '2' %}selected{% endif %}>Limpieza</option>
-                <option value="3" {% if view.request.GET.tipo_pedido == '3' %}selected{% endif %}>Limpieza consultorio</option> 
-                <option value="4" {% if view.request.GET.tipo_pedido == '4' %}selected{% endif %}>Toner</option> 
-                <option value="5" {% if view.request.GET.tipo_pedido == '5' %}selected{% endif %}>Papeleria consultorio</option> 
-              </select>        
-          </div>
-          <div class="form-group col-sm-3"> 
+          <div class="row">                        
+            {% for input in form_filtro %}              
+            <div class="form-group col-3">
+              
+              <label for="{{input.name}}">{{input.label}}</label>
+              {{input}}
+              {{input.errors}}
+            </div>
+            {% endfor %}                        
+          <div class="form-group col-3"> 
               <button type="submit" class="btn btn-primary btn-sm"><i class="material-icons">search</i></button>
           </div>
           </div>
