--- a/templates/admin/base_ecomer.html
+++ b/templates/admin/base_ecomer.html
@@ -308,6 +308,16 @@
                                 </div>
                             </a></div>
                     </div>
+                    <div class="col-sm-3">
+                        <div class="ih-item circle effect6 scale_up"><a href="{% url 'empresa:detl_compra_suc' 7 %}">
+                                <div class="img"><img src="{% static 'images/globos.jpg' %}" alt="img">
+                                </div>
+                                <div class="info">
+                                    <h3>Globos</h3>
+                                    <p>Pedido</p> 
+                                </div>
+                            </a></div>
+                    </div>
                 </div>
             </div>
 
