--- a/templates/pedido/report_gen.html
+++ b/templates/pedido/report_gen.html
@@ -32,6 +32,7 @@
               <option value="4" {% if view.request.GET.tipo_pedido == '4' %}selected{% endif %}>Toner</option>
               <option value="5" {% if view.request.GET.tipo_pedido == '5' %}selected{% endif %}>Papeleria consultorio</option>
               <option value="6" {% if view.request.GET.tipo_pedido == '6' %}selected{% endif %}>Toner consultorio</option>
+              <option value="7" {% if view.request.GET.tipo_pedido == '7' %}selected{% endif %}>Globos</option>
             </select>
           </div>
           <div class="form-group col-sm-3">
