Actulizacion vista de nuevo modulo limpieza oficina

--- a/templates/pedido/report_gen.html
+++ b/templates/pedido/report_gen.html
@@ -33,6 +33,7 @@
               <option value="5" {% if view.request.GET.tipo_pedido == '5' %}selected{% endif %}>Papeleria consultorio</option>
               <option value="6" {% if view.request.GET.tipo_pedido == '6' %}selected{% endif %}>Toner consultorio</option>
               <option value="7" {% if view.request.GET.tipo_pedido == '7' %}selected{% endif %}>Globos</option>
+              <option value="8" {% if view.request.GET.tipo_pedido == '8' %}selected{% endif %}>Limpieza oficina</option>
             </select>
           </div>
           <div class="form-group col-sm-3">
